--- a/Bootstrap4/confusion/contactus.html
+++ b/Bootstrap4/confusion/contactus.html
@@ -47,9 +47,7 @@
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>
-                        We take inspiration from the World's best cuisines, and create a
-                        unique fusion experience. Our lipsmacking creations will tickle
-                        your culinary senses!
+                        We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!
                     </p>
                 </div>
                 <div class="col-12 col-sm"></div>
@@ -101,7 +99,7 @@
         </div>
 
         <div class="row row-content">
-            <div class="col-12">
+            <div class="col-12 ">
                 <h3>Send us your Feedback</h3>
             </div>
             <div class="col-12 col-md-9">
@@ -109,15 +107,13 @@
                     <div class="form-group row">
                         <label for="firstname" class="col-md-2 col-form-label">Firts Name</label>
                         <div class="col-md-10">
-                            <input type="text" class="form-control" id="firstname" placeholder="First Name"
-                                name="firstname" />
+                            <input type="text" class="form-control" id="firstname" placeholder="First Name" name="firstname" />
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="telnum" class=" col-12 col-md-2 col-form-label">Contact Tel</label>
                         <div class="col-5 col-md-3">
-                            <input type="tel" class="form-control" id="areacode" placeholder="Area code"
-                                name="areacode" />
+                            <input type="tel" class="form-control" id="areacode" placeholder="Area code" name="areacode" />
                         </div>
 
                         <div class="col-7 col-md-7">
