--- a/Bootstrap4/confusion/index.html
+++ b/Bootstrap4/confusion/index.html
@@ -37,7 +37,7 @@
                 </ul>
                 <span class="navbar-text">
                     <a data-toggle="modal" data-target="#loginModal">
-                    <span class="fa fa-sign-in"></span> Login</a>
+                        <span class="fa fa-sign-in"></span> Login</a>
                 </span>
             </div>
 
@@ -99,11 +99,89 @@
 
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-html="true" title=" Our call us at <br><strong> +573206603082 </strong>" data-placement="bottom" data-toggle="tooltip" href="#reservefrom"> Reserve Table</a>
+                    <a role="button" data-target="#reserveModal" class="btn btn-block nav-link btn-warning" data-toggle="modal"> Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve Table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row p-2 ">
+                            <div class="form-group">
+
+                                <label class="  col-4 col-form-label" for="exampleInputNumberGuests3">Number of Guests</label>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                    <label class="form-check-label" for="inlineRadio1">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                    <label class="form-check-label" for="inlineRadio2">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                    <label class="form-check-label" for="inlineRadio1">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                    <label class="form-check-label" for="inlineRadio4">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                    <label class="form-check-label" for="inlineRadio5">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                    <label class="form-check-label" for="inlineRadio6">6</label>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="form-row p-2 m-2">
+                            <label class=" col col-form-label" for="exampleInputSection3">Section</label>
+                            <div class="col-10 btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                  <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                  <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                </label>
+
+                            </div>
+                        </div>
+                        <div class="form-row m-2 p-2">
+                            <label for="dataTime" class=" col-6 col-md-2 col-form-label"> Data and Time</label>
+                            <div class="col-4 col-md-4">
+                                <input type="text" class="form-control" id="date" placeholder="Date" name="date" />
+                            </div>
+
+                            <div class="col-4 col-md-4">
+                                <input type="text" class="form-control" id="time" placeholder="Time" name="time" />
+
+                            </div>
+                        </div>
+                        <div class="form-row p-2 m-2 ">
+                            <div class=" col-md-6 offset-md-2 btn-group">
+                                <button type="button" class="btn   btn-secondary btn-sm " data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn  btn-primary btn-sm ml-2 ">Reserve</button>
+                            </div>
+
+
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
 
     <div class="container ">
         <div class="row row-content">
@@ -254,7 +332,8 @@
 
                             </div>
                             <div class="form-group row">
-                                <label for="dateTime" class=" col-12 col-sm-6 col-md-2 col-form-label">Date and Time</label>
+                                <label for="dateTime" class=" col-12 col-sm-6 col-md-2 col-form-label">Date and
+                                    Time</label>
                                 <div class="col-sm-3 ">
                                     <input type="tel" class="form-control" id="date" placeholder="Date" name="date" />
                                 </div>
@@ -338,11 +417,7 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
+
 </body>
 
 </html>
